syntax = "proto3";

package auth;

option go_package = "brainiac/gen/auth;auth";
import "google/api/annotations.proto";

service AuthService {
    rpc Login (LoginRequest) returns (LoginReply) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {
        option (google.api.http) = {
            post: "/v1/refresh"
            body: "*"
        };
    }
    rpc Logout (LogoutRequest) returns (LogoutReply) {
        option (google.api.http) = {
            post: "/v1/logout"
            body: "*"
        };
    }
    rpc GetUserId (GetUserIdRequest) returns (GetUserIdReply) {
        option (google.api.http) = {
            get: "/v1/userid"
        };
    }
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenReply {
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutReply {
    bool success = 1;
}

message GetUserIdRequest {
    string access_token = 1;
}

message GetUserIdReply {
    string user_id = 1;
}
